<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
    android:id="@+id/watchers_videoclub"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/watchers_videoclub"
    android:textSize="34sp"
    android:textColor="@color/watchers_videoclub_color"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintVertical_bias="0.1"
    app:layout_constraintBottom_toTopOf="@+id/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/logo_videoclub"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/catalogo_pelis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catalogo_pelis"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/calcular_precios"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/calcular_precios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_precios"
        app:layout_constraintTop_toTopOf="@+id/catalogo_pelis"
        app:layout_constraintStart_toEndOf="@+id/catalogo_pelis"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/contactanos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contactanos"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/catalogo_pelis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>